--- a/references.bib
+++ b/references.bib
@@ -217,3 +217,10 @@
   title = {What is Cancer?},
   url = {https://stanfordhealthcare.org/medical-conditions/cancer/cancer.html}
 }
+
+@book{wickham2016r,
+  title={R for data science: import, tidy, transform, visualize, and model data},
+  author={Wickham, Hadley and Grolemund, Garrett},
+  year={2016},
+  publisher={" O'Reilly Media, Inc."}
+}
