added note that theme is complex and a link to the theme docs in the additional resources section.

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -96,9 +96,6 @@ making it easier for them to understand and remember your message quickly.
 This section will cover examples of how to choose and refine a visualization given a data set and a question that you want to answer, 
 and then how to create the visualization in R \index{ggplot} using `ggplot2`.  To use the `ggplot2` package, we need to load the `tidyverse` metapackage.
 
-
-
-
 ```{r 03-tidyverse, warning=FALSE, message=FALSE}
 library(tidyverse)
 ```
@@ -240,6 +237,14 @@ co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   theme(text = element_text(size = 18))
 co2_line
 ```
+
+> **Note:** 
+> The `theme` function is quite complex and has many arguments 
+> that can be specified to control many non-data aspects of a visualization.
+> An in-depth discussion of the `theme` function is beyond the scope of this book,
+> however we invite readers who are interested to learn more 
+> to read the `theme` function documentation
+> (linked to in our Additional Resources section at the end of this chapter).
 
 Finally, let's see if we can better understand the oscillation by changing the visualization slightly. Note that it is totally fine to use a small number of visualizations to answer different aspects of the question you are trying to answer. We will accomplish
 this by using *scales*, \index{ggplot!scales} another important feature of `ggplot2` that easily transforms the different variables and set limits.
@@ -799,6 +804,9 @@ knitr::include_graphics("img/faithful_zoom.svg")
 - The [`ggplot2` page on the tidyverse website](https://ggplot2.tidyverse.org) is where you should look if you want to learn more about the functions in this chapter, the full set of arguments you can use, and other related functions. The site also provides a very nice cheat sheet that summarizes many of the data wrangling functions from this chapter.
 - The [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/) has a wealth of information on designing effective visualizations. It is not specific to any particular programming language or library. If you want to improve your visualization skills, this is the next place to look.
 - [R for Data Science](https://r4ds.had.co.nz/) has a chapter on [creating visualizations using `ggplot2`](https://r4ds.had.co.nz/data-visualisation.html). This reference is specific to R and `ggplot2`, but provides a much more detailed introduction to the full set of tools that `ggplot2` provides. This chapter is where you should look if you want to learn how to make more intricate visualizations in `ggplot2` than what is included in this chapter.
+- The [`theme` function documentation](https://ggplot2.tidyverse.org/reference/theme.html)
+is an excellent reference to see how you can fine tune the non-data aspects 
+of your visualization.
 - [R for Data Science](https://r4ds.had.co.nz/) has a chapter on 
 [dates and times](https://r4ds.had.co.nz/dates-and-times.html). 
 This chapter is where you should look if you want to learn about `date` vectors,
