added theme of each section to the section titles

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -104,8 +104,8 @@ library(tidyverse)
 options(warn = -1)
 ```
 
+### The Mauna Loa CO$_{\text{2}}$ data set with line graphs
 
-### The Mauna Loa CO$_{\text{2}}$ data set 
 The [Mauna Loa CO$_{\text{2}}$ data set](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html), 
 curated by [Dr. Pieter Tans, NOAA/GML](https://www.esrl.noaa.gov/gmd/staff/Pieter.Tans/) 
 and [Dr. Ralph Keeling, Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/)
@@ -284,7 +284,7 @@ and finally increases again until the end of the year. In Hawaii, there are two 
 Therefore, the oscillating pattern in CO$_{\text{2}}$ matches up fairly closely with the two seasons.
 
 
-### The island landmass data set
+### The island landmass data set with bar plots
 The `islands.csv` data set \index{Island landmasses} contains a list of Earth's landmasses as well as their area (in thousands of square miles) [@islandsdata]. 
 
 **Question:** \index{question!visualization} Are the continents (North / South America, Africa, Europe, Asia, Australia, Antarctica) Earth's seven largest landmasses? If so, what are the next few largest landmasses after those?
@@ -346,7 +346,7 @@ The plot in Figure \@ref(fig:03-data-islands-bar-4) is now a very effective visu
 and continents are coloured differently than other landmasses, making it quite clear that continents are the largest seven landmasses.
 
 
-### The Old Faithful eruption/waiting time data set
+### The Old Faithful eruption/waiting time data set with scatter plots
 The `faithful` data set \index{Old Faithful} contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes). The `faithful` data set is available in base R under the name `faithful` so it does not need to be loaded.
 
 **Question:** \index{question!visualization} Is there a relationship between the waiting time before an eruption to the duration of the eruption? 
@@ -382,7 +382,7 @@ faithful_scatter
 ```
 
 
-### The Canadian languages data set
+### The Canadian languages data set with axis transformation
 
 We will return to the `can_lang` data set [@timbers2020canlang], \index{Canadian languages} which contains counts of languages from the 2016 Canadian census.
 
@@ -553,7 +553,7 @@ ggplot(can_lang, aes(
   scale_color_brewer(palette = "RdYlBu")
 ```
 
-### The Michelson speed of light data set
+### The Michelson speed of light data set with histograms
 The `morley` data set \index{Michelson speed of light} contains measurements of the speed of light (in kilometres per second with 299,000 subtracted) from the year 1879 
 for five experiments, each with 20 consecutive runs [@lightdata]. This data set is available in base R under the name `morley` so it does not need to be loaded.
 
