minor ed to wrangling learning objs

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -12,12 +12,10 @@ application, providing more practice working through a whole case study.
 By the end of the chapter, readers will be able to:
 
   - define the term "tidy data"
-  - discuss the advantages and disadvantages of storing data in a tidy data
-    format
-  - define what vector and data frames are in R, and describe how they relate to
+  - discuss the advantages of storing data in a tidy data format
+  - define what vectors, lists, and data frames are in R, and describe how they relate to
     each other
-  - describe the types of data that can be stored in integer, double, character,
-    logical, and factor vectors in R
+  - describe the common types of data in R and their uses
   - recall and use the following functions for their
     intended data wrangling tasks:
       - `across`
@@ -53,7 +51,7 @@ This knowledge will helpful in effectively utilizing these objects in our data a
 
 ### What is a data frame?
 
-A data frame is a table-like structure for storing data in R.  Data frames are
+A data frame \index{data frame} is a table-like structure for storing data in R.  Data frames are
 important to learn about because most data that you will encounter in practice
 can be naturally stored as a table.  In order to define data frames precisely,
 we need to introduce a few technical terms:
